# code-buddy-rust

./: .gitignore  Cargo.toml  package.json
src/: cli.rs  config.rs  main.rs
src/commands/: commit.rs
tests/: cli_tests.rs
