[package]
name = "code-buddy-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
built = "0.6"

[[bin]]
name = "cb"
path = "src/main.rs"
